--- a/Present/Base.lproj/Main.storyboard
+++ b/Present/Base.lproj/Main.storyboard
@@ -115,6 +115,7 @@
                                 </state>
                                 <connections>
                                     <action selector="loginAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="u7X-kh-oKa"/>
+                                    <segue destination="fEF-hd-HZ3" kind="presentation" id="tZB-dX-SmJ"/>
                                 </connections>
                             </button>
                         </barButtonItem>
@@ -195,15 +196,15 @@
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ey0-5f-1zE">
                                             <rect key="frame" x="8" y="0.0" width="44" height="43.5"/>
                                         </imageView>
+                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xo2-ig-ehn">
+                                            <rect key="frame" x="543" y="8" width="51" height="31"/>
+                                        </switch>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Course Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RVF-hN-cX5">
                                             <rect key="frame" x="65" y="11" width="106" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xo2-ig-ehn">
-                                            <rect key="frame" x="543" y="8" width="51" height="31"/>
-                                        </switch>
                                     </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -215,12 +216,68 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Courses" id="9lP-M9-f4Z">
                         <barButtonItem key="leftBarButtonItem" title="Menu" id="gHZ-nu-Den"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="N7Y-t0-HkU"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="N7Y-t0-HkU">
+                            <connections>
+                                <segue destination="uRZ-WF-KNN" kind="push" id="e6T-R2-xly"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sdA-zS-mA1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="861" y="232"/>
+        </scene>
+        <!--New Course-->
+        <scene sceneID="8Aq-7I-9aX">
+            <objects>
+                <viewController id="uRZ-WF-KNN" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NHj-Vd-KRm"/>
+                        <viewControllerLayoutGuide type="bottom" id="NGa-wD-kua"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pOC-62-RoD">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="New Course" id="jfj-sG-T7X"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CbF-xz-ska" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1530" y="228"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="hax-pS-dsv">
+            <objects>
+                <tableViewController id="MUq-LW-Um8" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="hPi-q4-ORg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="FUw-9S-mK9">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <items>
+                                <navigationItem title="Title" id="1mp-x5-IlZ"/>
+                            </items>
+                        </navigationBar>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="91a-f6-4Ag">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="91a-f6-4Ag" id="RAQ-G2-Q2O">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="MUq-LW-Um8" id="Vku-NE-420"/>
+                            <outlet property="delegate" destination="MUq-LW-Um8" id="GGL-RV-k3v"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BAa-KA-hTO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="861" y="896"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GZP-Ln-FlM">
